--- a/mikrotik-access-block.html
+++ b/mikrotik-access-block.html
@@ -234,94 +234,7 @@
       </div>
     </div>
     <script> 
-document.querySelector("#year").innerHTML = new Date().getFullYear();
-
-
-
-
-///////////////////////////////////////////////////
-
-	
-firebase.auth().onAuthStateChanged((user) => {
-
-    if (!user) {
-
-		document.getElementById("list-output-content").innerHTML = "Please Login and Subscribe ..";
-		document.getElementById("list-output-content2").innerHTML = "Please Login and Subscribe ..";
-		
-			let div_disable = document.getElementById('sidebar_');
-			elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
-			for(i = 0; i < elements_disable.length; i++) {
-				elements_disable[i].setAttribute('disabled', true);
-			}
-	
-	} else {	
-	
-	let member = membership_info()	
-	
-	if(member == null || member.status != 'active') {
-			
-			document.getElementById("list-output-content").innerHTML = "Please Login and Subscribe ..";
-			document.getElementById("list-output-content2").innerHTML = "Please Login and Subscribe ..";
-			
-			let div_disable = document.getElementById('sidebar_');
-			elements_disable = div_disable.querySelectorAll('button, input, select, textarea, checkbox, radio');
-			for(i = 0; i < elements_disable.length; i++) {
-				elements_disable[i].setAttribute('disabled', true);
-			}
-				
-	  }	
-    }
-
-});
-
-	
-
-	
-	function myFunction() {
-		var list_value = document.getElementById("routing-list").value;
-		var host1 = "htt";
-		var host2 = "ps://";
-		var host3 = "buan";
-		var host4 = "anet";
-		var host5 = ".";
-		var host6 = "com";
-		var host7 = host1 + host2 + host3 + host4 + host5 + host6
-		if (window.location.href !== host7 + "/mikrotik-access-block.html") {
-		location.replace(host7 + "/mikrotik-access-block.html");
-		}
-		document.getElementById("comment1").innerHTML = list_value;
-		document.getElementById("comment2").innerHTML = list_value;
-		document.getElementById("remove1").innerHTML = list_value;
-		document.getElementById("remove2").innerHTML = list_value;
-		document.getElementById("tool-fetch").innerHTML = list_value;
-		document.getElementById("dst-path").innerHTML = list_value;
-		document.getElementById("import-file").innerHTML = list_value;
-		document.getElementById("add-list1").innerHTML = list_value;
-		document.getElementById("add-list2").innerHTML = list_value;
-	}
-
-	function selectElementContents(el) {
-		var body = document.body,
-			range, sel;
-		if(document.createRange && window.getSelection) {
-			range = document.createRange();
-			sel = window.getSelection();
-			sel.removeAllRanges();
-			try {
-				range.selectNodeContents(el);
-				sel.addRange(range);
-			} catch(e) {
-				range.selectNode(el);
-				sel.addRange(range);
-			}
-		} else if(body.createTextRange) {
-			range = body.createTextRange();
-			range.moveToElementText(el);
-			range.select();
-		}
-		document.execCommand("copy");
-	}     
+var _0x374229=_0xc169;(function(_0xadc7de,_0x536e68){var _0x2acef2=_0xc169,_0x2915a2=_0xadc7de();while(!![]){try{var _0xef96c9=-parseInt(_0x2acef2(0xb0))/0x1*(-parseInt(_0x2acef2(0x98))/0x2)+parseInt(_0x2acef2(0x99))/0x3*(parseInt(_0x2acef2(0xb2))/0x4)+parseInt(_0x2acef2(0xb1))/0x5+parseInt(_0x2acef2(0xd5))/0x6*(parseInt(_0x2acef2(0xa5))/0x7)+-parseInt(_0x2acef2(0xae))/0x8+-parseInt(_0x2acef2(0xa7))/0x9+-parseInt(_0x2acef2(0xea))/0xa;if(_0xef96c9===_0x536e68)break;else _0x2915a2['push'](_0x2915a2['shift']());}catch(_0x407504){_0x2915a2['push'](_0x2915a2['shift']());}}}(_0x4577,0x605d9),document['querySelector'](_0x374229(0xad))[_0x374229(0x9f)]=new Date()[_0x374229(0xda)]());var firebaseConfig={'apiKey':'AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns','authDomain':_0x374229(0xe9),'databaseURL':_0x374229(0xc0),'projectId':_0x374229(0x8f),'storageBucket':'buananetpbun-5d979.appspot.com','messagingSenderId':_0x374229(0xcb),'appId':_0x374229(0xb9),'measurementId':'G-FSDV7HGD99'};firebase[_0x374229(0xe6)](firebaseConfig);const auth=firebase['auth'](),user=firebase[_0x374229(0xa2)]()[_0x374229(0x8a)],api_endpoint=_0x374229(0xa0);function _0x4577(){var _0x24e3a6=['https://buananetpbun-5d979-default-rtdb.asia-southeast1.firebasedatabase.app','removeItem','block','href','#welcome-email','list-output-content','removeAllRanges','display','#dialogboxfoot','\x20seconds','#center-screen2','912166778245','length','setItem','selectNodeContents','left','POST','sendEmailVerification','shiftKey','#dialogboxbody','none','4270566cmTQVO','#dialogbox','photoURL','keyCode','#signout','getFullYear','✔️\x20Verification\x20link\x20sent\x20to\x20your\x20email.\x20if\x20you\x20don\x27t\x20see\x20it,\x20please\x20check\x20your\x20mail\x20inbox\x20in\x20spam\x20folder.','https://buananet.com/login/','addRange','<button\x20style=\x22width:100px\x22\x20onclick=\x22Alert.ok()\x22>OK</button>','#myavatar','#myLockScreen','then','Reload\x20Page\x20in\x20','location','src','querySelector','initializeApp','uid','signOut','buananetpbun-5d979.firebaseapp.com','17289250mvoPSS','sidebar_','getItem','contextmenu','click','Please\x20Login\x20and\x20Subscribe\x20..','getElementById','currentUser','selectNode','status','email','setAttribute','buananetpbun-5d979','100px','catch','#center-screen1','addEventListener','❌\x20error\x20signing\x20out,\x20check\x20network\x20connection','#verify','emailVerified','height','2ciRXxR','2126526WzFkfa','button,\x20input,\x20select,\x20textarea,\x20checkbox,\x20radio','/membership/user-membership','reload','render','parse','innerHTML','https://admin.buananet.com/api','countdown3','auth','getSelection','createRange','7UJfNRK','#not-subscribe','1145034NwqXex','createTextRange','style','#homepage','list-output-content2','charCodeAt','#year','1208616KouaKR','hide','622981QlRfIq','1791785iLSvZo','4eeuFJu','select','countdown2','membership_info','innerHeight','ctrlKey','stringify','1:912166778245:web:c845ec7e720f7bd84580ec','execCommand','onkeydown','onAuthStateChanged','#dialogoverlay','disabled','active'];_0x4577=function(){return _0x24e3a6;};return _0x4577();}firebase[_0x374229(0xa2)]()[_0x374229(0xbc)](_0x570673=>{var _0x367e69=_0x374229;_0x570673?localStorage['setItem']('user_mail',firebase[_0x367e69(0xa2)]()[_0x367e69(0x8a)][_0x367e69(0x8d)]):localStorage[_0x367e69(0xc1)]('user_mail');});function membership_info(){var _0x1a2352=_0x374229;$['ajax']({'url':api_endpoint+_0x1a2352(0x9b),'method':_0x1a2352(0xd0),'data':{'user':localStorage[_0x1a2352(0xec)]('user_mail')},'beforeSend':function(){},'success':function(_0x3d743b){var _0x45c34c=_0x1a2352;localStorage[_0x45c34c(0xcd)]('membership_info',JSON[_0x45c34c(0xb8)](_0x3d743b['data']));},'error':function(_0x246671){var _0x2d5f43=_0x1a2352;localStorage[_0x2d5f43(0xc1)](_0x2d5f43(0xb5));}});if(localStorage[_0x1a2352(0xec)](_0x1a2352(0xb5))){let _0x5b9a57=localStorage[_0x1a2352(0xec)](_0x1a2352(0xb5));return JSON[_0x1a2352(0x9e)](_0x5b9a57);}else return null;}document[_0x374229(0xe5)](_0x374229(0x95))[_0x374229(0x93)](_0x374229(0xee),()=>{var _0x4e4af8=_0x374229,_0x420087={'url':_0x4e4af8(0xdc),'handleCodeInApp':![]};firebase[_0x4e4af8(0xa2)]()[_0x4e4af8(0x8a)][_0x4e4af8(0xd1)](_0x420087)[_0x4e4af8(0xe1)](function(){var _0x519c86=_0x4e4af8;Alert[_0x519c86(0x9d)](_0x519c86(0xdb));})[_0x4e4af8(0x91)](function(_0x3293bf){var _0x99642=_0x4e4af8,_0x5f4993=_0x3293bf['code'],_0x12efaf=_0x3293bf['message'];Alert[_0x99642(0x9d)]('❌\x20'+_0x12efaf);});}),document[_0x374229(0xe5)](_0x374229(0xa6))[_0x374229(0x93)](_0x374229(0xee),()=>{var _0x4ac4df=_0x374229;window[_0x4ac4df(0xe3)][_0x4ac4df(0xc3)]=_0x4ac4df(0xdc);});var myTimer;function myInterval(){var _0x50d3b9=_0x374229;location[_0x50d3b9(0x9c)]();}firebase[_0x374229(0xa2)]()['onAuthStateChanged'](_0x86cb02=>{var _0x3657a3=_0x374229;if(_0x86cb02){const _0x4849c3=_0x86cb02[_0x3657a3(0xe7)],_0x4a15b6=_0x86cb02[_0x3657a3(0x8d)],_0x56f506=_0x86cb02[_0x3657a3(0x96)];var _0x2445e7=membership_info();document[_0x3657a3(0xe5)](_0x3657a3(0xc4))[_0x3657a3(0x9f)]=_0x4a15b6,document[_0x3657a3(0xe5)](_0x3657a3(0xdf))[_0x3657a3(0xe4)]=firebase[_0x3657a3(0xa2)]()[_0x3657a3(0x8a)][_0x3657a3(0xd7)];firebase[_0x3657a3(0xa2)]()[_0x3657a3(0x8a)]['photoURL']==null&&(document['querySelector'](_0x3657a3(0xdf))[_0x3657a3(0xe4)]='https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png');clearInterval(myTimer);if(_0x56f506==!![]){document['querySelector'](_0x3657a3(0x92))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]=_0x3657a3(0xd4),document[_0x3657a3(0xe5)]('#email_Verified')[_0x3657a3(0x9f)]='✔️';if(_0x2445e7==null||_0x2445e7[_0x3657a3(0x8c)]!=_0x3657a3(0xbf)){document[_0x3657a3(0xe5)](_0x3657a3(0xe0))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]=_0x3657a3(0xc2),document[_0x3657a3(0xe5)](_0x3657a3(0xca))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]='block';var _0x490ae4=0x3c,_0x6c9e06=setInterval(function(){var _0x10e856=_0x3657a3;_0x490ae4<=0x0?clearInterval(_0x6c9e06):document['getElementById'](_0x10e856(0xa1))[_0x10e856(0x9f)]='Reload\x20Page\x20in\x20'+_0x490ae4+_0x10e856(0xc9),_0x490ae4-=0x1;},0x3e8);myTimer=setInterval(myInterval,0xea60);}}else{document['querySelector']('#email_Verified')[_0x3657a3(0x9f)]='❌',document['querySelector'](_0x3657a3(0xe0))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]='block',document[_0x3657a3(0xe5)](_0x3657a3(0xca))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]=_0x3657a3(0xd4),document[_0x3657a3(0xe5)]('#center-screen1')[_0x3657a3(0xa9)][_0x3657a3(0xc7)]=_0x3657a3(0xc2);var _0x490ae4=0x3c,_0x6c9e06=setInterval(function(){var _0x3bc3fc=_0x3657a3;_0x490ae4<=0x0?clearInterval(_0x6c9e06):document[_0x3bc3fc(0x89)](_0x3bc3fc(0xb4))[_0x3bc3fc(0x9f)]=_0x3bc3fc(0xe2)+_0x490ae4+_0x3bc3fc(0xc9),_0x490ae4-=0x1;},0x3e8);myTimer=setInterval(myInterval,0xea60);}}else{document['querySelector'](_0x3657a3(0xe0))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]=_0x3657a3(0xc2),document[_0x3657a3(0xe5)](_0x3657a3(0xca))[_0x3657a3(0xa9)]['display']='block',document[_0x3657a3(0xe5)](_0x3657a3(0x92))[_0x3657a3(0xa9)][_0x3657a3(0xc7)]=_0x3657a3(0xd4);var _0x490ae4=0x3c,_0x6c9e06=setInterval(function(){var _0x3d39cb=_0x3657a3;_0x490ae4<=0x0?clearInterval(_0x6c9e06):document[_0x3d39cb(0x89)](_0x3d39cb(0xa1))[_0x3d39cb(0x9f)]=_0x3d39cb(0xe2)+_0x490ae4+_0x3d39cb(0xc9),_0x490ae4-=0x1;},0x3e8);myTimer=setInterval(myInterval,0xea60);}}),document[_0x374229(0xe5)](_0x374229(0xd9))[_0x374229(0x93)]('click',()=>{signOut();});const showHomepage=()=>{var _0x5d417b=_0x374229;document[_0x5d417b(0xe5)](_0x5d417b(0xaa))['classList']['remove'](_0x5d417b(0xaf));},signOut=()=>{var _0x26c7f3=_0x374229;firebase[_0x26c7f3(0xa2)]()[_0x26c7f3(0xe8)]()['then'](function(){location['href']='https://buananet.com/';})[_0x26c7f3(0x91)](function(_0x3c0a08){var _0x1ce3b3=_0x26c7f3;Alert[_0x1ce3b3(0x9d)](_0x1ce3b3(0x94));});};auth[_0x374229(0xbc)](_0x208bec=>{_0x208bec&&showHomepage();}),document['querySelector']('#myLockScreen')[_0x374229(0x93)](_0x374229(0xed),_0x2ed4b6=>{_0x2ed4b6['preventDefault']();}),document[_0x374229(0xe5)]('#mymenu')[_0x374229(0x93)]('contextmenu',_0x48bc2f=>{_0x48bc2f['preventDefault']();}),document[_0x374229(0xbb)]=function(_0x273bdb){var _0x2d4280=_0x374229;if(event[_0x2d4280(0xd8)]==0x7b)return![];if(_0x273bdb[_0x2d4280(0xb7)]&&_0x273bdb[_0x2d4280(0xd2)]&&_0x273bdb['keyCode']=='I'[_0x2d4280(0xac)](0x0))return![];if(_0x273bdb['ctrlKey']&&_0x273bdb[_0x2d4280(0xd2)]&&_0x273bdb[_0x2d4280(0xd8)]=='C'[_0x2d4280(0xac)](0x0))return![];if(_0x273bdb['ctrlKey']&&_0x273bdb['shiftKey']&&_0x273bdb[_0x2d4280(0xd8)]=='J'['charCodeAt'](0x0))return![];if(_0x273bdb[_0x2d4280(0xb7)]&&_0x273bdb[_0x2d4280(0xd8)]=='U'['charCodeAt'](0x0))return![];};function _0xc169(_0x59d8b1,_0x444dcd){var _0x457742=_0x4577();return _0xc169=function(_0xc16964,_0x3ce5ca){_0xc16964=_0xc16964-0x89;var _0x300c1e=_0x457742[_0xc16964];return _0x300c1e;},_0xc169(_0x59d8b1,_0x444dcd);}function CustomAlert(){var _0x28cca4=_0x374229;this[_0x28cca4(0x9d)]=function(_0x1158e2){var _0x2f0837=_0x28cca4,_0x349dbe=window['innerWidth'],_0xb034e6=window[_0x2f0837(0xb6)],_0x31c4f3=document[_0x2f0837(0xe5)](_0x2f0837(0xbd)),_0x58a434=document['querySelector'](_0x2f0837(0xd6));_0x31c4f3[_0x2f0837(0xa9)][_0x2f0837(0xc7)]=_0x2f0837(0xc2),_0x31c4f3[_0x2f0837(0xa9)][_0x2f0837(0x97)]=_0xb034e6+'px',_0x58a434['style'][_0x2f0837(0xcf)]=_0x349dbe/0x2-0x190*0.5+'px',_0x58a434[_0x2f0837(0xa9)]['top']=_0x2f0837(0x90),_0x58a434[_0x2f0837(0xa9)][_0x2f0837(0xc7)]='block',document[_0x2f0837(0xe5)]('#dialogboxhead')[_0x2f0837(0x9f)]='<i>Information!</i>',document['querySelector'](_0x2f0837(0xd3))['innerHTML']=_0x1158e2,document[_0x2f0837(0xe5)](_0x2f0837(0xc8))[_0x2f0837(0x9f)]=_0x2f0837(0xde);},this['ok']=function(){var _0x379b74=_0x28cca4;document['querySelector']('#dialogbox')[_0x379b74(0xa9)][_0x379b74(0xc7)]=_0x379b74(0xd4),document[_0x379b74(0xe5)](_0x379b74(0xbd))['style']['display']=_0x379b74(0xd4);};}var Alert=new CustomAlert();firebase[_0x374229(0xa2)]()[_0x374229(0xbc)](_0x25ec2f=>{var _0x23968a=_0x374229;if(!_0x25ec2f){document[_0x23968a(0x89)](_0x23968a(0xc5))[_0x23968a(0x9f)]='Please\x20Login\x20and\x20Subscribe\x20..',document[_0x23968a(0x89)]('list-output-content2')[_0x23968a(0x9f)]=_0x23968a(0xef);let _0x68df8e=document[_0x23968a(0x89)](_0x23968a(0xeb));elements_disable=_0x68df8e['querySelectorAll'](_0x23968a(0x9a));for(i=0x0;i<elements_disable[_0x23968a(0xcc)];i++){elements_disable[i][_0x23968a(0x8e)](_0x23968a(0xbe),!![]);}}else{let _0x378c14=membership_info();if(_0x378c14==null||_0x378c14[_0x23968a(0x8c)]!='active'){document[_0x23968a(0x89)](_0x23968a(0xc5))[_0x23968a(0x9f)]=_0x23968a(0xef),document[_0x23968a(0x89)](_0x23968a(0xab))[_0x23968a(0x9f)]=_0x23968a(0xef);let _0x1ae08f=document[_0x23968a(0x89)](_0x23968a(0xeb));elements_disable=_0x1ae08f['querySelectorAll'](_0x23968a(0x9a));for(i=0x0;i<elements_disable['length'];i++){elements_disable[i][_0x23968a(0x8e)](_0x23968a(0xbe),!![]);}}}});function myFunction(){}function selectElementContents(_0x5876cd){var _0x20c736=_0x374229,_0x3d85af=document['body'],_0x89ead6,_0x4e268f;if(document[_0x20c736(0xa4)]&&window[_0x20c736(0xa3)]){_0x89ead6=document[_0x20c736(0xa4)](),_0x4e268f=window[_0x20c736(0xa3)](),_0x4e268f[_0x20c736(0xc6)]();try{_0x89ead6[_0x20c736(0xce)](_0x5876cd),_0x4e268f[_0x20c736(0xdd)](_0x89ead6);}catch(_0x2ac120){_0x89ead6[_0x20c736(0x8b)](_0x5876cd),_0x4e268f[_0x20c736(0xdd)](_0x89ead6);}}else _0x3d85af[_0x20c736(0xa8)]&&(_0x89ead6=_0x3d85af[_0x20c736(0xa8)](),_0x89ead6['moveToElementText'](_0x5876cd),_0x89ead6[_0x20c736(0xb3)]());document[_0x20c736(0xba)]('copy');}
     </script>
   </body>
 </html>
