--- a/mikrotik-change-mac-address.html
+++ b/mikrotik-change-mac-address.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Change Mac Address Interface Mikrotik Generator - BuanaNETPBun.Github.io</title>
-    <meta content='Change Mac Address Interface Mikrotik Generator - BuanaNETPBun.Github.io' name='description'>
+    <title>Change or Random Mac Address Interface Mikrotik Generator - Buananet.com</title>
+    <meta content='Change or Random Mac Address Interface Mikrotik Generator - Buananet.com' name='description'>
     <meta content='mikrotik, mac address, interface, wan, script, generator, router, winbox, termimal, rsc' name='keywords'>
     <meta content='index, follow, noodp' name='robots'>
-    <link rel="shortcut icon" href="https://buananetpbun.gothub.io/favicon.ico" type="image/x-icon">
-    <meta property="og:title" content="Change Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
-    <meta property="og:description" content="Change Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
+    <link rel="shortcut icon" href="https://buananet.com/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="Change or Random Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
+    <meta property="og:description" content="Change or Random Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
     <meta property="og:image" content="https://buananet.com/img/mikrotik_mac_address.png">
-    <meta property="og:image:alt" content="Change Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
+    <meta property="og:image:alt" content="Change or Random Mac Address Interface Mikrotik Generator By BuanaNET-Pbun">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://buananetpbun.gothub.io/mikrotik-change-mac-address.html">
+    <meta property="og:url" content="https://buananet.com/mikrotik-change-mac-address.html">
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <link rel="stylesheet" href="./login/login.css">
     <style>
       /* -------------------------------------------------------------
       ################################################################
-      # Change Mac Address Interface Mikrotik Generator
+      # Change or Random Mac Address Interface Mikrotik Generator
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
@@ -103,10 +103,10 @@
           <img alt="mikrotik" src="./img/made-for-mikrotik.png">
         </div>
         <ul>
-          <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
-          <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
-          <li><a href="javascript:callmodal()">DONATE</a></li>
-          <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
+          <li><a href="https://buananet.com/">HOME</a></li>
+          <li><a href="https://buananet.com/updates.html">UPDATES</a></li>
+          <li><a href="https://buananet.com/docs.html">DOCS</a></li>
+          <li><a href="https://buananet.com/contact.html">CONTACT</a></li>
         </ul>
         <div class="show-homepage-menu">
           <div id="homepage" class="hide">
@@ -132,12 +132,12 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-                    <a href="https://buananetpbun.gothub.io/mikrotik-change-mac-address.html"><img alt="buananet.com" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>Buananetpbun</span>.Github.io</a>     
+                    <a href="https://buananet.com/mikrotik-change-mac-address.html"><img alt="buananet.com" style="float:left; margin-top:0px;margin-right:5px" width='35' src="./img/mylogo.png"><span style='color:#ff6600 !important'>BUANANET</span>.COM</a>    
         </div>
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>CHANGE <span style="color:#ff6600 !important">MAC ADDRESS</span> INTERFACE MIKROTIK GENERATOR</h1>
+        <h1>CHANGE OR RANDOM <span style="color:#ff6600 !important">MAC ADDRESS</span> INTERFACE MIKROTIK</h1>
       </div>
       <div id="sidebar_" class="sidebar">
 		<div style="clear:both"></div>
@@ -147,42 +147,50 @@
             <label><b>Interface Name (ether)</b></label><br>
             <input type="text" id="input-interface" value="" placeholder="ether1">
           </div>
+          <div style="width:100%;margin-right:10px">
+            <label><b>MAC Options</b></label><br>
+            <select id="MAC-Script" onchange="myFunction(); show_hide()">
+              <option value="static">Change MAC Address Only</option>
+              <option value="random">Auto Random MAC (run after reboot)</option>
+            </select>
+          </div>		  
           <div style="width:100%;">
-            <label><b>Mac Address</b></label><br>
+            <label><b>MAC Address</b></label><br>
             <span style="display:flex">
             <input onkeypress="return event.charCode != 32" style="width:100%;margin-right:2px" type="text" id="input-mac-address" value="" placeholder="52:E2:4F:28:8B:9F">
-            <button style="width:100px;padding:5px;" type="button" onclick="genMAC()">Random</button>
+            <button style="width:100px;padding:5px;" type="button" id="btnRandom" onclick="genMAC()">Random</button>
             </span>
           </div>
         </div>
         <div style="margin-top:20px"></div>
-        <button style="margin-top:-5px" type="button" onclick="myFunction()">Generate</button> 
+        <button style="margin-top:-5px" type="button" onclick="myFunction();show_hide()">Generate</button> 
         <button style="margin-top:-5px" type="button" onclick="selectElementContents(document.getElementById('list-output-r1'))">Copy Script</button> 
         <div class="list-output-content">
           <div id="list-output-r1">
             <span style="color:#ff6600;">
             ################################################################<br>
-            # CHANGE MAC ADDRESS INTERFACE MIKROTIK GENERATOR <br>
-            # Created By: buananetpbun.gothub.io<br>
+            # CHANGE OR RANDOM MAC ADDRESS INTERFACE MIKROTIK GENERATOR<br>
+            # Created By: buananet.com<br>
             ################################################################<br>
             </span>
-            /interface ethernet set "<span style="color:#ff6600" id="out-interface1"></span>" mac-address="<span style="color:#ff6600" id="out-mac-address"></span>"<br>
-          </div>
+            <span style="display:none" id="show-static-mac">/interface ethernet set "<span style="color:#ff6600" id="out-interface1"></span>" mac-address="<span style="color:#ff6600" id="out-mac-address1"></span>"<br></span>
+           <span style="display:none" id="show-random-mac">/system scheduler add comment="Random MAC Address by Buananet.com" name="Random MAC Address" on-event=":local RandomMAC \"\$[:rndstr length=1 from=\"0123456789ABCDEF\"]\$[:rndstr length=1 from=\"26ae\"]\"\r\ \nfor x from=0 to=4 do={:set RandomMAC \"\$RandomMAC:\$[:rndstr length=2 from=\"0123456789ABCDEF\"]\"}\r\ \n/interface ethernet set \"<span style="color:#ff6600" id="out-interface2"></span>\" mac-address=(\$RandomMAC)" start-time=startup</span>
+		  </div>
         </div>
       </div>
       <div class="footer">
         <div style="float:right;margin-top:8px">    
           <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23696C67&title_bg=%233B860B&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>	
-        © Copyright 2020-<span id="year">2024</span> <a target="_blank" href="https://buananetpbun.gothub.io/">buananetpbun.gothub.io</a> - All Rights Reserved..
+        © Copyright 2020-<span id="year">2024</span> <a target="_blank" href="https://buananet.com/">BUANANET.COM</a> - All Rights Reserved..
           <div style="margin-top:3px; color:#777; font-size:11px; font-weight:normal">
             Project by <a target="_blank" rel="nofollow" href="https://github.com/buananetpbun">@buananetpbun</a> PangkalanBun, KoBar 74112 - INDONESIA
           </div>
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
-      <div id="center-screen1" class="center-screen"><div style="font-size:20px; background-color:#333; padding:20px; border-radius:10px">Please Activate Your Email.<br><button id="verify">VERIFY YOUR E-MAIL NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown2"></div></div></div>
-      <div id="center-screen2" class="center-screen"><div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px">GET PREMIUM ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">GO TO BUANANET.COM</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown3">redirected to the new domain https://buananet.com</div></div>
+      <div id="center-screen1" class="center-screen"><div style="font-size:20px; background-color:#333; padding:20px; border-radius:10px">PLEASE ACTIVATE YOUR EMAIL<br><button id="verify">VERIFY YOUR E-MAIL NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px; display:none" id="countdown2"></div></div></div>
+      <div id="center-screen2" class="center-screen"><div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px; margin-bottom:10px">GET FULL ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">SUBSCRIBE NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px; display:none" id="countdown3">Loading..</div></div>
 	  </div>	  
     </div>
      <div id="dialogoverlay"></div>
