--- a/index.html
+++ b/index.html
@@ -432,12 +432,12 @@
         <h2>OTHER MIKROTIK BATCH TOOLS</h2>
         <div class="row">
           <div class="column">
-            <p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
-            <p><a target="_blank"  href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a></p>
+            <p><a target="_blank" rel="nofollow" href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
+            <p><a target="_blank" rel="nofollow" href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://github.com/buananetpbun/MIKROTIK-AUTO-BACKUP-FROM-BATCH">Batch: RouterOS Auto Backup</a></p>
-            <p><a target="_blank"  href="https://github.com/buananetpbun/Restore-Winbox-Sessions-to-Default">Batch: Restore Winbox Session</a></p>
+            <p><a target="_blank" rel="nofollow" href="https://github.com/buananetpbun/MIKROTIK-AUTO-BACKUP-FROM-BATCH">Batch: RouterOS Auto Backup</a></p>
+            <p><a target="_blank" rel="nofollow" href="https://github.com/buananetpbun/Restore-Winbox-Sessions-to-Default">Batch: Restore Winbox Session</a></p>
           </div>
         </div>
         <br>
